docker build, add kubernetes specs (3x 32 CPUs/24GB RAM/1.5TB volume)